# 6502

./: CMakeLists.txt  conanfile.txt
examples/: bublesort8.s  clearmem.s  dow.s  fastx10.s
include/: run.hpp  types.hpp  utility.hpp
run_rom/: CMakeLists.txt  main.cpp
src/: lookup.cpp  lookup.hpp  main.cpp  ops.hpp  run.cpp  types.hpp  utility.hpp
test/: CMakeLists.txt  test.cpp
